--- a/ladi_be/src/main/resources/application.properties
+++ b/ladi_be/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 server.servlet.context-path=/api/v1
-spring.datasource.url=jdbc:mysql://103.57.223.106:3306/ladi
+spring.datasource.url=jdbc:mysql://103.57.222.151:3306/ladimarket
 #spring.datasource.url=jdbc:mysql://localhost:3306/ladi
 spring.datasource.username=login01
-spring.datasource.password=ladI#0922
+spring.datasource.password=ladI#0323
 #spring.datasource.username=hnhy2001
 #spring.datasource.password=hnhy2001
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
